<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.bidib.jbidib.switchboard</groupId>
    <artifactId>switchboard</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Model Railway Switchboard</name>
    <description>Java Swing-based switchboard component for controlling and visualising a model railway layout</description>

    <modules>
        <module>switchboard-component</module>
        <module>switchboard-demo-app</module>
        <!--
        <module>switchboard-demo-wix-installer</module>
        -->
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <jackson.version>3.1.4</jackson.version>
        <slf4j.version>2.0.18</slf4j.version>
        <logback.version>1.5.34</logback.version>
        <flatlaf-version>3.7.2</flatlaf-version>
        <jsvg.version>2.1.0</jsvg.version>
        <assertj-swing-junit-jupiter.version>4.0.0-beta-3</assertj-swing-junit-jupiter.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <javacv.version>1.5.13</javacv.version>
        <jgoodies-forms.version>1.9.0</jgoodies-forms.version>
        <jgoodies-validation.version>2.5.1</jgoodies-validation.version>
        <jgoodies-binding.version>2.13.0</jgoodies-binding.version>
        <junit6.version>6.0.3</junit6.version>
        <mockito.version>5.20.0</mockito.version>
        
        <project.organization.name>bidib.org</project.organization.name>
        <project.inceptionYear>2026</project.inceptionYear>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.bidib.jbidib.switchboard</groupId>
                <artifactId>switchboard-component</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bidib.jbidib.switchboard</groupId>
                <artifactId>switchboard-component</artifactId>
                <classifier>tests</classifier>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bidib.jbidib.switchboard</groupId>
                <artifactId>switchboard-demo-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--
            <dependency>
                <groupId>org.bidib.jbidib.switchboard</groupId>
                <artifactId>switchboard-demo-wix-installer</artifactId>
                <version>${project.version}</version>
            </dependency>
            -->
            <dependency>
                <groupId>tools.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>tokyo.northside</groupId>
                <artifactId>assertj-swing-junit-jupiter</artifactId>
                <version>${assertj-swing-junit-jupiter.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>${flatlaf-version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.weisj</groupId>
                <artifactId>jsvg</artifactId>
                <version>${jsvg.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jgoodies</groupId>
                <artifactId>jgoodies-binding</artifactId>
                <version>${jgoodies-binding.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jgoodies</groupId>
                <artifactId>jgoodies-forms</artifactId>
                <version>${jgoodies-forms.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jgoodies</groupId>
                <artifactId>jgoodies-validation</artifactId>
                <version>${jgoodies-validation.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

	        <dependency>
	            <groupId>org.bytedeco</groupId>
	            <artifactId>javacv-platform</artifactId>
	            <version>${javacv.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-graphics</artifactId>
                    </exclusion>
                </exclusions>
	        </dependency>
				        
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit6.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.6</version>
                    <configuration>
                        <argLine>--enable-native-access=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>io.github.git-commit-id</groupId>
                    <artifactId>git-commit-id-maven-plugin</artifactId>
                    <version>10.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.8.0</version>
				</plugin>
            </plugins>
        </pluginManagement>
		<plugins>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>process-sources</phase>
					</execution>
				</executions>
				<configuration>
					<verbose>false</verbose>
					<dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<offline>true</offline>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>        
		</plugins>
    </build>
    
    <profiles>
        <profile>
            <!--
            <id>win</id>
            <activation>
                <os> 
                    <family>windows</family>
                </os>
            </activation>
            -->
            <id>native-installer</id>
            <activation>
                <property> 
                    <name>native-installer</name>
                    <value>true</value>
                </property>
            </activation>
            <modules>
                <module>switchboard-demo-wix-installer</module>
            </modules>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.bidib.jbidib.switchboard</groupId>
                        <artifactId>switchboard-demo-wix-installer</artifactId>
                        <version>${project.version}</version>
                    </dependency>
                </dependencies>
            </dependencyManagement>
        </profile>
	</profiles>    
    
</project>
